[project]
name = "agent-orchestration-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.7",
    "opik>=1.6.12",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
